add more on memory use.  1024 bounded queue